# scalable_rbe_prototype

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  artifact_metadata.toml
.github/workflows/: pipeline.yml
benches/: benchmarks.rs  rbe.rs
params/: README.md  param_selection.ipynb
params/.ipynb_checkpoints/: param_selection-checkpoint.ipynb  param_selection2-checkpoint.ipynb  param_selection3-checkpoint.ipynb
src/: dgs.rs  lib.rs  mat.rs  ntt.rs  rbe.rs  utils.rs
